perf: 添加一个arrow的测试以及vertx eventbus的测试